# sr-docmentor

./: README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-cpu.yml  docker-compose-cuda.yml  main.py  ollama_entrypoint.sh  pyproject.toml
backend/src/: agent.py  build_rag.py  db.py  models.py  rag.py  utils.py
